# Reusable-MCP

./: .gitignore  AGENTS.md  GEMINI.md
.gemini/: settings.json
.tmp_memdb/: audit.jsonl  memory.sqlite-shm  memory.sqlite-wal
Code-Log-Search-MCP/: README.md  openapi.yaml  run-tests-and-server.sh
Docker-MCP/: README.md  run-tests-and-server.sh
Git-My-Way-MCP/: README.md  run-tests-and-server.sh
Memory-MCP/: Dockerfile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml  run-tests-and-server.sh
Memory-MCP/.mcp-venv/: pyvenv.cfg
Memory-MCP/deploy/: memory-mcp.service
Memory-MCP/docs/: IMPLEMENTATION_STATUS.md  MCP-QUICKSTART.md  QUICKSTART.md  SPEC.md  Test Results.md  Test prompts.md  Tests-by-Gemini.md  WHITEPAPER.md  mcp-evaluation-roadmap-addition-1.md
Memory-MCP/examples/: mcp_client.py
Memory-MCP/server/: app.py  storage.py
Memory-MCP/tests/: test_server.py
Net-MCP/: README.md  run-tests-and-server.sh
NetworkDiag-MCP/: README.md  run-tests-and-server.sh
Prior-Self-MCP/: README.md  run-tests-and-server.sh  server-bg-20250913-172725.out  server-bg-20250913-173943.out  server-bg-20250913-174457.out
Service-MCP/: README.md  run-tests-and-server.sh
SysDiag-MCP/: README.md  run-tests-and-server.sh
Test-Start-MCP/: HANDOVER_FOR_GPT.md  IMPLEMENTATION_SUMMARY.md  README.md  allowlist.json  run-tests-and-server.sh
docs/: GPT-COLLAB-GUIDE.md  MCP-DEV-PATTERN.md  MCP-HTTP-GUIDE.md  PLAYWRIGHT-TEST-SEQUENCE.md  PR_SUMMARY_cls_literal_root_timeout_playwright.md  TEST-UI-CHECKLIST.md
scripts/: dev-check.sh  dev-setup.sh
(+115 files in other folders)
