[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-mcp"
version = "0.1.0"
description = "Memory-MCP: durable memory service with HTTP, SSE, and MCP Streamable HTTP endpoint"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
  { name = "Reusable MCPs Team" }
]
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.29",
]

[project.urls]
Homepage = "https://example.invalid"

[project.scripts]
memory-mcp = "server.app:main"
memory-mcp-serve = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
namespaces = false

